--- a/front-end/src/components/shared/SideNav/SideNav.module.scss
+++ b/front-end/src/components/shared/SideNav/SideNav.module.scss
@@ -6,9 +6,9 @@
 
   .MuiDrawer-paper {
     width: $drawerWidth;
-    background-color: #040404;
+    background-color: $black;
     box-sizing: 'border-box';
-    color: #ffffff;
+    color: $white;
     display: flex;
     flex-direction: column;
   }
@@ -24,19 +24,16 @@
 .sectionHeader {
   padding-left: 16px;
   font-size: 0.75rem;
-  color: #a0a4a8;
+  color: $white;
 }
 
 .MuiListItemButton-root {
-  color: #ffffff;
+  color: $white;
 
-  &:hover {
-    background-color: #253547;
-  }
 }
 
 .MuiListItemIcon-root {
-  color: #ffffff;
+  color: $white;
 }
 
 .MuiSvgIcon-root {
