chore: Update color constants and add ProjectTable component to Dashboard

--- a/front-end/src/assets/theme/constants.scss
+++ b/front-end/src/assets/theme/constants.scss
@@ -7,3 +7,16 @@ $dark-blue: #040404;
 $white: #ffffff;
 $black: #000000;
 
+
+
+$success: #00C853;
+$warning: #FFB800;
+$danger: #FF0001;
+$info: #5CAD77;
+
+// Screen sizes
+$xxl: 1440px;
+$xl: 1280px;
+$l: 1024px;
+$m: 768px;
+$s: 540px;
