chore: Update color constants, add ProjectTable component to Dashboard, and improve theme styling

--- a/front-end/src/assets/theme/constants.scss
+++ b/front-end/src/assets/theme/constants.scss
@@ -6,7 +6,11 @@ $light-blue: #2596be;
 $dark-blue: #040404;
 $white: #ffffff;
 $black: #000000;
-
+$dark-blue2:#394360;
+$bgColorSidebar: #1E1E1E;
+$primary: #2596be;
+$lightGreyBorder: #dee2e6;
+$darkGrey: #343a40;
 
 
 $success: #00C853;
