--- a/front-end/src/components/ProjectTable/ProjectTable.module.scss
+++ b/front-end/src/components/ProjectTable/ProjectTable.module.scss
@@ -1,29 +1,34 @@
+/* ProjectTable.module.scss */
 @import "../../assets/theme/constants.scss";
-.grid{
-    border-radius: 0.8rem !important;
-    border: 1px solid $lightGreyBorder !important;
-    box-shadow: none !important;
-    
-.gridContainer {
-   display: flex;
-  justify-content: space-between !important;
 
-  padding: 1rem;
-
-}
-}
-.table {
-    width: 100% !important;
+.grid {
+  border-radius: 0.8rem !important;
+  border: 1px solid $lightGreyBorder !important;
+  box-shadow: none !important;
   
-    &::-webkit-scrollbar {
-      height: 8px; // Set height for horizontal scrollbar
-    }
-  
-    &::-webkit-scrollbar-track {
-      background-color: $bgColorSidebar !important;
-    }
-  
-    &::-webkit-scrollbar-thumb {
-      background-color: rgb(146, 146, 146) !important;
-    }
+  .gridContainer {
+    display: flex;
+    justify-content: space-between !important;
+    padding: 1rem;
   }
+}
+
+.table {
+  width: 100% !important;
+  
+  .tableHead {
+    border-top: 1px solid $lightGreyBorder !important;
+  }
+
+  &::-webkit-scrollbar {
+    height: 50px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: $bgColorSidebar !important;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(146, 146, 146) !important;
+  }
+}
