chore: Add Projects and Configurations pages, and update logo, flag, and settings images

--- a/front-end/src/assets/theme/constants.scss
+++ b/front-end/src/assets/theme/constants.scss
@@ -2,15 +2,15 @@ $drawerWidth: 240px;
 $drawerWidthCollapsed: 56px;
 
 
-$light-blue: #2596be;
-$dark-blue: #040404;
+$light-blue: #437EF7;
+$dark-blue: #1C2534;
 $white: #ffffff;
 $black: #000000;
-$dark-blue2:#394360;
+$dark-blue2:#1C2534;
 $bgColorSidebar: #1E1E1E;
 $primary: #2596be;
 $lightGreyBorder: #dee2e6;
-$darkGrey: #343a40;
+$darkGrey: #A5ACBA;
 
 
 $success: #00C853;
