--- a/front-end/src/components/shared/InfoCard/InfoCard.module.scss
+++ b/front-end/src/components/shared/InfoCard/InfoCard.module.scss
@@ -2,12 +2,16 @@
 .card {
     display: flex;
     align-items: center ;
-    padding: 24px !important;; /* Adjusted padding to match MUI spacing scale */
+    padding: 24px !important; /* Adjusted padding to match MUI spacing scale */
     border: 1px solid #e0e0e0;
     border-radius: 8px !important; /* Adjusted to match MUI default border radius */
     width: 100%;
-    height: 5.125rem;
-    max-width: 300px !important;
+    height: 6rem;
+    
+  }
+  .smallCard {
+    width: 100%;
+    height: auto;
   }
   
   .icon {
