--- a/front-end/src/components/shared/SideNav/SideNav.module.scss
+++ b/front-end/src/components/shared/SideNav/SideNav.module.scss
@@ -3,12 +3,15 @@
 .drawer {
   width: $drawerWidth;
   flex-shrink: 0;
+  background-color: $dark-blue !important;
+  background: $dark-blue !important;
 
   .MuiDrawer-paper {
     width: $drawerWidth;
-    background-color: $black;
+    background-color: $dark-blue;
     box-sizing: 'border-box';
-    color: $white;
+    color: $darkGrey;
+    
     display: flex;
     flex-direction: column;
   }
@@ -24,16 +27,59 @@
 .sectionHeader {
   padding-left: 16px;
   font-size: 0.75rem;
-  color: $white;
+  color: $darkGrey;
 }
 
 .MuiListItemButton-root {
-  color: $white;
+  color: $darkGrey;
 
+  &.Mui-selected {
+    background-color: rgba(255, 255, 255, 0.2) !important;
+    position: relative;
+    
+    .MuiListItemIcon-root {
+      color: #FFFFFF !important;
+    }
+
+    .MuiTypography-root {
+      color: #FFFFFF !important;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      width: 4px;
+      height: 100%;
+      background-color: white;
+    }
+  }
+}
+
+.selected {
+  background-color: rgba(255, 255, 255, 0.2) !important;
+  position: relative;
+
+  .MuiListItemIcon-root {
+    color: #FFFFFF !important;
+  }
+
+  .MuiTypography-root {
+    color: #FFFFFF !important;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 4px;
+    height: 100%;
+    background-color: white;
+  }
 }
 
 .MuiListItemIcon-root {
-  color: $white;
+  color: $darkGrey;
 }
 
 .MuiSvgIcon-root {
