--- a/front-end/src/pages/ResetPassWord/ResetPassWord.module.scss
+++ b/front-end/src/pages/ResetPassWord/ResetPassWord.module.scss
@@ -27,7 +27,7 @@ margin-top: 1rem;
     font-weight: 600 !important;
     font-size: 1.5rem !important;
 
-    margin-bottom: 1.5em;
+    margin-bottom: 2rem !important;
   }
   
   .form {
@@ -45,7 +45,7 @@ margin-top: 1rem;
     justify-content: center;
     align-items: center;
     background: radial-gradient(133.25% 177.67% at 11.15% -22.64%, #4C02F1 0%, #4B02EF 1%, #3903C4 13%, #29039E 25%, #1D0380 38%, #130468 51%, #0C0457 65%, #07044D 81%, #06044A 100%);
-    @media (max-width: 700px) {
+    @media (max-width: 900px) {
         display: none;
       }
   }
@@ -69,7 +69,7 @@ margin-top: 1rem;
         gap: 0px;
         
       }
-      @media (min-width: 700px) and (max-width: 900px) {
+      @media (min-width: 700px) and (max-width: 901px) {
         display: none;
       }
   }
