fogot passowrd  intregration

--- a/front-end/src/pages/ForgetPassWord/ForgotPassWord.module.scss
+++ b/front-end/src/pages/ForgetPassWord/ForgotPassWord.module.scss
@@ -28,7 +28,14 @@
   cursor: pointer;
   text-align: center;
 }
-
+.text{
+  text-align: center;
+  font-size: 1.5rem !important;
+  font-weight: 700;
+  color: #29039e;
+  margin: 1rem;
+  padding: 1rem;
+}
 .subtitle {
   color: #333;
   font-weight: 600 !important;
