--- a/front-end/src/components/PositionsCard/ProjectTable.module.scss
+++ b/front-end/src/components/PositionsCard/ProjectTable.module.scss
@@ -31,3 +31,10 @@
     background-color: rgb(146, 146, 146) !important;
   }
 }
+
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
