--- a/front-end/src/components/ProjectInfoCard/ProjectInfoCard.module.scss
+++ b/front-end/src/components/ProjectInfoCard/ProjectInfoCard.module.scss
@@ -1,10 +1,14 @@
 .projectCard{
    box-shadow: none;
    border: 1px solid #e0e0e0;
-    min-height: 10.25rem;
+    min-height: 13rem;
     cursor: pointer;
     border-radius: 10px;
     box-shadow: none !important;
+
+}
+.agreementAmount{
+    margin-bottom: 5rem;
 }
 .commonText{
   
