chore: Update InfoCard height in shared component

--- a/front-end/src/components/shared/InfoCard/InfoCard.module.scss
+++ b/front-end/src/components/shared/InfoCard/InfoCard.module.scss
@@ -6,7 +6,7 @@
     border: 1px solid #e0e0e0;
     border-radius: 8px !important; /* Adjusted to match MUI default border radius */
     width: 100%;
-    height: 6rem;
+    height: 6rem
     
   }
   .smallCard {
